# konferenzen.eu-vncserver

./: CMakeLists.txt  PresentationServer.cpp  PresentationServer.h  README.txt  ScreenCapture.cpp  ScreenCapture.h  build.txt  ca.crt  main.cpp  resources.h  resources.rc
cmake/Modules/: FindLibVNC.cmake
